syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "peers.proto";
import "flow.proto";

package peerdb_route;

message CreateCDCFlowRequest {
  peerdb_flow.FlowConnectionConfigs connection_configs = 1;
}

message CreateCDCFlowResponse {
  string worflow_id = 1;
}

message CreateQRepFlowRequest {
  peerdb_flow.QRepConfig qrep_config = 1;
}

message CreateQRepFlowResponse {
  string worflow_id = 1;
}

message ShutdownRequest {
  string workflow_id = 1;
  string flow_job_name = 2;
  peerdb_peers.Peer source_peer = 3;
  peerdb_peers.Peer destination_peer = 4;
}

message ShutdownResponse {
  bool ok = 1;
  string error_message = 2;
}

message ListPeersRequest {
}

message ListPeersResponse {
  repeated peerdb_peers.Peer peers = 1;
}

message ValidatePeerRequest {
 peerdb_peers.Peer peer = 1;
}

message CreatePeerRequest {
  peerdb_peers.Peer peer = 1;
}

enum ValidatePeerStatus {
  CREATION_UNKNOWN = 0;
  VALID = 1;
  INVALID = 2;
}

enum CreatePeerStatus {
  VALIDATION_UNKNOWN = 0;
  CREATED = 1;
  FAILED = 2;
}

message ValidatePeerResponse {
  ValidatePeerStatus status = 1;
  string message = 2;
}

message CreatePeerResponse {
  CreatePeerStatus status = 1;
  string message = 2;
}

service FlowService {
  rpc ListPeers(ListPeersRequest) returns (ListPeersResponse) {}
  rpc ValidatePeer(ValidatePeerRequest) returns (ValidatePeerResponse) {}
  rpc CreatePeer(CreatePeerRequest) returns (CreatePeerResponse) {}
  rpc CreateCDCFlow(CreateCDCFlowRequest) returns (CreateCDCFlowResponse) {}
  rpc CreateQRepFlow(CreateQRepFlowRequest) returns (CreateQRepFlowResponse) {}
  rpc ShutdownFlow(ShutdownRequest) returns (ShutdownResponse) {}
}
